tests/cli/snapshots/cli_tests__cli__snapshot_helpers__auth_login_invalid_credentials.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
Logging in to registry: http://[VERSION].1:[PORT]
[TIMESTAMP] DEBUG hyper::client::connect::http: connecting to [VERSION].1:45355
[TIMESTAMP] DEBUG hyper::client::connect::http: connected to [VERSION].1:45355
[TIMESTAMP] DEBUG hyper::proto::h1::io: flushed 135 bytes
[TIMESTAMP] DEBUG hyper::proto::h1::io: parsed 3 headers
[TIMESTAMP] DEBUG hyper::proto::h1::conn: incoming body is content-length (19 bytes)
[TIMESTAMP] DEBUG hyper::proto::h1::conn: incoming body completed
[TIMESTAMP] DEBUG hyper::client::pool: pooling idle connection for ("http", [VERSION].1:45355)
Error: Configuration error: Login failed with status 401 Unauthorized: Invalid credentials
