tests/cli/snapshots/cli_tests__cli__snapshot_helpers__auth_login_invalid_port.snap
---
source: tests/cli/snapshot_helpers.rs
assertion_line: 195
expression: normalized
---
Error: Configuration error: Failed to connect to registry: builder error: invalid port number
