tests/cli/snapshots/cli_tests__cli__snapshot_helpers__auth_login_unreachable.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
Logging in to registry: http://localhost:9999
Error: Configuration error: Failed to connect to registry: error sending request for url (http://localhost:9999/auth/token): error trying to connect: tcp open error: Operation not permitted (os error 1)
