tests/cli/snapshots/cli_tests__cli__snapshot_helpers__auth_logout_nonexistent.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[OK] Successfully logged out from http://nonexistent-registry
