tests/cli/snapshots/cli_tests__cli__snapshot_helpers__auth_logout_success.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[OK] Successfully logged out from http://test-registry
