tests/cli/snapshots/cli_tests__cli__snapshot_helpers__cli_invalid_repositories_path.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill provides skill management through CLI.

Skills directory is configured in skill-project.toml:
[tool.fastskill]
skills_directory = "path/to/skills"

Run 'fastskill init --skills-dir <path>' to create a new project.

Examples:
fastskill add ./my-skill           # Add skill from folder
fastskill repos add local-skills --repo-type local /path/to/skills    # Add local repository
fastskill pptx                     # Read skill documentation (SKILL.md)
fastskill search "text processing" # Search for skills
fastskill disable skill-id          # Disable a skill

Usage: fastskill [OPTIONS] [SKILL_ID] [COMMAND]

Commands:
  add          Add a skill (two modes: add to project manifest OR register skill locally)
  analyze      Diagnostic and analysis commands
  auth         Manage authentication for registries
  disable      Disable skills by ID
  init         Initialize skill-project.toml in current skill directory
  install      Apply manifest: install skills from skill-project.toml [dependencies] (canonical command for manifest-driven workflow)
  list         List installed skills and reconcile with skill-project.toml and skills.lock (shows name, description, and flags by default; use --details for full info)
  marketplace  Create and manage skill marketplace artifacts
  reindex      Reindex the vector index for semantic search
  remove       Uninstall skills (only way to stop using skills, removes from manifest and local installation)
  package      Package skills into ZIP artifacts with versioning
  publish      Publish artifacts to remote API or local folder
  read         Stream skill documentation (SKILL.md content) to stdout
  repos        Manage repository list and browse remote skill catalog.
  search       Search skills by query with explicit scope flags (remote default)
  serve        Start the FastSkill HTTP API server
  show         Show metadata for one or all installed skills (name, version, description, source); use --tree for dependency tree
  sync         Sync installed skills to the agent's metadata file
  update       Update skills to latest versions (behavior matrix: affects manifest, lock, and/or installed state)
  version      Display FastSkill version
  help         Print this message or the help of the given subcommand(s)

Arguments:
  [SKILL_ID]
          Skill ID to read (used when no subcommand is specified)

Options:
      --repositories-path <REPOSITORIES_PATH>
          Path to repositories.toml file

  -v, --verbose
          Enable verbose output

      --global
          Use global skills directory

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
