tests/cli/snapshots/cli_tests__cli__snapshot_helpers__cli_repositories_path_argument.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill provides skill management through CLI.

Skills directory is configured in skill-project.toml:
[tool.fastskill]
skills_directory = "path/to/skills"

Run 'fastskill init --skills-dir <path>' to create a new project.

Examples:
fastskill add ./my-skill           # Add skill from folder
fastskill registry add local-skills --repo-type local /path/to/skills  # Add local repository
fastskill "text processing"        # Search for skills
fastskill disable skill-id          # Disable a skill

Usage: fastskill [OPTIONS] [QUERY] [COMMAND]

Commands:
  add       Add a new skill to the skills database
  auth      Manage authentication for registries
  disable   Disable skills by ID
  init      Initialize skill-project.toml in current skill directory
  install   Install skills from skill-project.toml [dependencies] into configured skills directory; creates or updates skills.lock
  list      List installed skills and reconcile with skill-project.toml and skills.lock (shows name, description, and flags by default; use --details for full info)
  reindex   Reindex the vector index for semantic search
  remove    Remove skills from the skills database
  package   Package skills into ZIP artifacts with versioning
  publish   Publish artifacts to S3 blob storage
  read      Stream skill documentation (SKILL.md content) to stdout
  registry  Manage repositories and browse/search the registry catalog (remote)
  search    Search installed skills by query (local semantic search)
  serve     Start the FastSkill HTTP API server
  show      Show metadata for one or all installed skills (name, version, description, source); use --tree for dependency tree
  sources   Manage skill sources (repositories): list, add, remove, show, update, test, refresh; create marketplace [aliases: source]
  update    Update skills to latest versions
  version   Display FastSkill version
  help      Print this message or the help of the given subcommand(s)

Arguments:
  [QUERY]
          Search query string (used when no subcommand is specified)

Options:
      --repositories-path <REPOSITORIES_PATH>
          Path to repositories.toml file

  -v, --verbose
          Enable verbose output

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
