tests/cli/snapshots/cli_tests__cli__snapshot_helpers__cli_with_env_var.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
expression: normalized
---
Usage: [FASTSKILL_BIN] <command> [arguments]

Discovery:
  list    List locally installed skills
          Usage: list [OPTIONS]
  read    Read full SKILL.md content for a skill
          Usage: read <SKILL_ID> [OPTIONS]
  search  Search skills by query with explicit scope flags
          Usage: search <QUERY> [--local|--remote] [OPTIONS]
Packages:
  add      Add a skill (from local path, zip, git URL, or registry ID)
           Usage: add <SOURCE> [OPTIONS]
  install  Apply manifest: install skills from skill-project.toml [dependencies]
           Usage: install [OPTIONS]
  reindex  Reindex the vector index for semantic search
           Usage: reindex [OPTIONS]
  remove   Uninstall skills (removes from manifest and local installation)
           Usage: remove <SKILL_ID>... [OPTIONS]
  update   Update skills to latest versions
           Usage: update [SKILL_ID] [OPTIONS]
Project:
  init  Initialize skill-project.toml in current skill directory
        Usage: init [OPTIONS]
Server:
  serve  Start the FastSkill HTTP API server
         Usage: serve [OPTIONS]
Setup:
  doctor  Diagnose FastSkill configuration and environment
          Usage: doctor [OPTIONS]
Other:
  analyze      Diagnostic and analysis commands
  cache        Inspect and reclaim the on-disk skill content cache
  completion   Emit a shell completion stub for top-level subcommands
  eval         Evaluation commands for skill quality assurance
  marketplace  Create and manage skill marketplace artifacts
  mcp          MCP server management
  optimize     Iterative skill-document optimization via text-gradient
  repos        Manage repository list and browse remote skill catalog
  spec         Export the CLI command surface as JSON, YAML, or Markdown
Options:
  --help, -h      Print this help message.
  --version, -V   Print version (fastskill [VERSION]).
  --skills-dir <skills-dir> Override the skills directory path
  --global        Use global skills directory (~/.config/fastskill/skills)
  --verbose, -v   Enable verbose output
